Add docz setup for documentation

--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -1,8 +1,7 @@
-# Entur SDK
-
-This SDK simplifies the use of Entur's travel APIs in JavaScript apps. For more information about Entur's APIs, see https://developer.entur.org
-
-Miss anything? Found a bug? File an [issue](https://github.com/entur/sdk/issues/new) or create a pull request!
+---
+name: Getting Started
+route: /getting-started
+---
 
 ## Install
 ```bash
@@ -35,13 +34,4 @@ The Entur SDK uses multiple endpoints for its services. Each endpoint can be ove
     journeyPlanner: '',
     geocoder: ''
 }
-```
-
-## Flow and TypeScript
-
-We provide library definitions for Flow and TypeScript. TypeScript should work out of the box. For Flow, make sure you include the following in your .flowconfig:
-
-```
-[libs]
-node_modules/@entur/sdk/lib/libdef.flow.js
 ```
