Remove dead links

--- a/docs/travel/getTripPatterns.mdx
+++ b/docs/travel/getTripPatterns.mdx
@@ -14,7 +14,7 @@ Types: [TripPattern](flow-types/TripPattern.js)
 
 `getTripPatterns` is for searching for itineraries for a trip from some location to a destination at a given time. The method takes one argument `query`, which is an object with search parameters.
 
-If you are going to do a huge amount of different searches at the same time, consider using our [`throttler`](#throttler) utility.
+If you are going to do a huge amount of different searches at the same time, consider using our [`throttler`](/utils/throttler) utility.
 
 ## Parameters
 
@@ -76,5 +76,3 @@ service.getTripPatterns(
     }
 })
 ```
-
-See [example/get-trip.js](./example/get-trip.js) for a more in depth example
