--- a/docs/travel/findTrips.mdx
+++ b/docs/travel/findTrips.mdx
@@ -10,7 +10,7 @@ route: /travel/findTrips
 (from: string, to: string, date?: Date | string | number) => Promise<Array<TripPattern>>
 ```
 
-Finds up to 5 trip patterns from `from` to `to` at the time specified. This is a convenience method, which first tries to find locations for the given `from` and `to` strings before searching for trips between them. If you need more control, see the [`getTripPatterns`](#gettrippatterns) method.
+Finds up to 5 trip patterns from `from` to `to` at the time specified. This is a convenience method, which first tries to find locations for the given `from` and `to` strings before searching for trips between them. If you need more control, see the [`getTripPatterns`](/travel/getTripPatterns) method.
 
 If no locations are found for either `from` or `to`, or if `date` is invalid, an error will be thrown.
 
