--- a/docs/departures/getDeparturesFromStopPlaces.mdx
+++ b/docs/departures/getDeparturesFromStopPlaces.mdx
@@ -21,4 +21,4 @@ The IDs of the stop places you are interested in.
 
 ### params (`Object`) [Optional]
 
-See the `params` parameter for `getDeparturesForStopPlace`.
+See the `params` parameter for [`getDeparturesForStopPlace`](/departures/getDeparturesFromStopPlace#params-object-optional).
