--- a/docs/travel/findTrips.mdx
+++ b/docs/travel/findTrips.mdx
@@ -34,22 +34,14 @@ const service = new EnturService({
     clientName: 'awesomecompany-awesomeapp'
 })
 
-async function printTripPatterns() {
-    const [fromFeature] = await service.getFeatures('Ryllikvegen, Lillehammer')
-    const [toFeature] = await service.getFeatures('Oslo S')
-
-    if (!fromFeature || !toFeature) {
-        return
+async function findSomeTrips() {
+    try {
+        const trips = await service.findTrips('Oslo S', 'Bergen stasjon')
+        console.log(trips);
+    } catch (error) {
+        console.error(error)
     }
-
-    const tripPatterns = await service.getTripPatterns({
-        searchDate: new Date(),
-        from: convertFeatureToLocation(fromFeature),
-        to: convertFeatureToLocation(toFeature),
-    })
-
-    console.log(tripPatterns)
 }
 
-printTripPatterns()
+findSomeTrips()
 ```
