--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -12,7 +12,7 @@ npm install @entur/sdk --save
 ```javascript
 import EnturService from '@entur/sdk'
 
-const service = new EnturService({ clientName: 'awesomecompany-awesomeapp' })
+const service = createEnturService({ clientName: 'awesomecompany-awesomeapp' })
 ```
 
 ### Configuration
