--- a/docs/travel/findTrips.mdx
+++ b/docs/travel/findTrips.mdx
@@ -28,9 +28,9 @@ The wanted time of departure. Can be anything that is parseable by `new Date()`.
 ## Example
 
 ```javascript
-import EnturService, { convertFeatureToLocation } from '@entur/sdk'
+import createEnturService, { convertFeatureToLocation } from '@entur/sdk'
 
-const service = new EnturService({
+const service = createEnturService({
     clientName: 'awesomecompany-awesomeapp'
 })
 
