--- a/docs/travel/getTripPatterns.mdx
+++ b/docs/travel/getTripPatterns.mdx
@@ -75,6 +75,12 @@ interface OverrideConfig {
 ## Example
 
 ```javascript
+import createEnturService from '@entur/sdk'
+
+const service = createEnturService({
+    clientName: 'awesomecompany-awesomeapp'
+})
+
 service.getTripPatterns(
     {
         from: {
