Fix incorrect libdef types

--- a/docs/departures/getDeparturesFromStopPlace.mdx
+++ b/docs/departures/getDeparturesFromStopPlace.mdx
@@ -31,4 +31,4 @@ An optional object of parameters to pass to the query.
 | `limitPerLine`           | `number`       | No limit     | The maximum number of departures to fetch per line and destination display. |
 | `whiteListedLines`       | `Array<string>` | `undefined` | A list of line IDs to include. All others will be excluded. If omitted, all are included. |
 | `whiteListedAuthorities` | `Array<string>` | `undefined` | A list of authority IDs to include. All others will be excluded. If omitted, all are included. |
-| `whiteListedModes`       | `Array<string>` | `undefined` | A list of transport modes to include. All others will be excluded. If omitted, all are included. |
+| `whiteListedModes`       | `Array<QueryMode>` | `undefined` | A list of transport modes to include. All others will be excluded. If omitted, all are included. |
