Write pitch and anti-pitch in documentation

--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -10,7 +10,7 @@ npm install @entur/sdk --save
 
 ## Setup
 ```javascript
-import EnturService from '@entur/sdk'
+import createEnturService from '@entur/sdk'
 
 const service = createEnturService({ clientName: 'awesomecompany-awesomeapp' })
 ```
