Improve syntax highlighting in code examples in docs

--- a/docs/departures/getDeparturesBetweenStopPlaces.mdx
+++ b/docs/departures/getDeparturesBetweenStopPlaces.mdx
@@ -6,7 +6,7 @@ route: /departures/getDeparturesBetweenStopPlaces
 
 # getDeparturesBetweenStopPlaces
 
-```javascript
+```typescript
 (fromStopPlaceId: string, toStopPlaceId: string, params?: GetDeparturesBetweenStopPlacesParams) => Promise<Array<Departure>>
 ```
 
