--- a/docs/departures/getDeparturesForServiceJourney.mdx
+++ b/docs/departures/getDeparturesForServiceJourney.mdx
@@ -6,7 +6,7 @@ route: /departures/getDeparturesForServiceJourney
 
 # getDeparturesForServiceJourney
 
-```javascript
+```typescript
 (id: string, date?: string) => Promise<Array<Departure>>
 ```
 
