--- a/docs/departures/getDeparturesFromQuays.mdx
+++ b/docs/departures/getDeparturesFromQuays.mdx
@@ -6,7 +6,7 @@ route: /departures/getDeparturesFromQuays
 
 # getDeparturesFromQuays
 
-```javascript
+```typescript
 (quayIds: Array<string>, params?: GetDeparturesParams) => Promise<Array<{ id: string, departures: Array<Departure | void> }>>
 ```
 
