--- a/docs/departures/getDeparturesFromStopPlace.mdx
+++ b/docs/departures/getDeparturesFromStopPlace.mdx
@@ -6,7 +6,7 @@ route: /departures/getDeparturesFromStopPlace
 
 # getDeparturesFromStopPlace
 
-```javascript
+```typescript
 (stopPlaceId: string, params?: GetDeparturesParams) => Promise<Array<Departure>>
 ```
 
