--- a/docs/departures/getDeparturesFromStopPlaces.mdx
+++ b/docs/departures/getDeparturesFromStopPlaces.mdx
@@ -6,7 +6,7 @@ route: /departures/getDeparturesFromStopPlaces
 
 # getDeparturesFromStopPlaces
 
-```javascript
+```typescript
 (stopPlaceIds: Array<string>, params?: GetDeparturesParams) => Promise<Array<{ id: string, departures: Array<Departure> }>>
 ```
 
