--- a/docs/geocoder/getFeatures.mdx
+++ b/docs/geocoder/getFeatures.mdx
@@ -5,7 +5,7 @@ menu: Geocoder
 
 # getFeatures
 
-```javascript
+```typescript
 (query: string, coords?: Coordinates, params?: GetFeaturesQuery) => Promise<Array<Feature>>
 ```
 
