--- a/docs/geocoder/getFeaturesReverse.mdx
+++ b/docs/geocoder/getFeaturesReverse.mdx
@@ -5,7 +5,7 @@ menu: Geocoder
 
 # getFeaturesReverse
 
-```javascript
+```typescript
 (coords: Coordinates, params?: GetFeaturesReverseParam) => Promise<Array<Feature>>
 ```
 
