--- a/docs/places/getBikeRentalStation.mdx
+++ b/docs/places/getBikeRentalStation.mdx
@@ -6,7 +6,7 @@ route: /places/getBikeRentalStation
 
 # getBikeRentalStation
 
-```javascript
+```typescript
 (stationId: string) => Promise<BikeRentalStation>
 ```
 
