--- a/docs/places/getBikeRentalStations.mdx
+++ b/docs/places/getBikeRentalStations.mdx
@@ -6,7 +6,7 @@ route: /places/getBikeRentalStations
 
 # getBikeRentalStations
 
-```javascript
+```typescript
 (stationIds: Array<string>) => Promise<Array<BikeRentalStation>>
 ```
 
