--- a/docs/places/getBikeRentalStationsByPosition.mdx
+++ b/docs/places/getBikeRentalStationsByPosition.mdx
@@ -6,7 +6,7 @@ route: /places/getBikeRentalStationsByPosition
 
 # getBikeRentalStationsByPosition
 
-```javascript
+```typescript
 (coordinates: Coordinates, distance?: number) => Promise<Array<BikeRentalStation>>
 ```
 
