--- a/docs/places/getNearestPlaces.mdx
+++ b/docs/places/getNearestPlaces.mdx
@@ -6,7 +6,7 @@ route: /places/getNearestPlaces
 
 # getNearestPlaces
 
-```javascript
+```typescript
 (coordinates: { latitude: number, longitude: number }, params?: NearestPlacesParams) => Promise<Array<NearestPlace>>
 ```
 
