--- a/docs/places/getQuaysForStopPlace.mdx
+++ b/docs/places/getQuaysForStopPlace.mdx
@@ -6,7 +6,7 @@ route: /places/getQuaysForStopPlace
 
 # getQuaysForStopPlace
 
-```javascript
+```typescript
 (stopPlaceId: string, params?: StopPlaceParams) => Promise<Array<Quay>>
 ```
 
