--- a/docs/places/getStopPlace.mdx
+++ b/docs/places/getStopPlace.mdx
@@ -6,7 +6,7 @@ route: /places/getStopPlace
 
 # getStopPlace
 
-```javascript
+```typescript
 (id: string, params?: StopPlaceParams) => Promise<StopPlaceDetails>
 ```
 
