--- a/docs/places/getStopPlaceFacilities.mdx
+++ b/docs/places/getStopPlaceFacilities.mdx
@@ -6,7 +6,7 @@ route: /places/getStopPlaceFacilities
 
 # getStopPlaceFacilities
 
-```
+```typescript
 (stopPlaceId: string) => Promise<StopPlaceFacilities>
 ```
 
