--- a/docs/places/getStopPlaces.mdx
+++ b/docs/places/getStopPlaces.mdx
@@ -6,7 +6,7 @@ route: /places/getStopPlaces
 
 # getStopPlaces
 
-```javascript
+```typescript
 (ids: Array<string>, params?: StopPlaceParams) => Promise<Array<StopPlaceDetails | void>>
 ```
 
