--- a/docs/places/getStopPlacesByPosition.mdx
+++ b/docs/places/getStopPlacesByPosition.mdx
@@ -6,7 +6,7 @@ route: /places/getStopPlacesByPosition
 
 # getStopPlacesByPosition
 
-```javascript
+```typescript
 (coordinates: Coordinates, distance?: number, params?: StopPlaceParams) => Promise<Array<StopPlaceDetails>>
 ```
 
