--- a/docs/travel/findTrips.mdx
+++ b/docs/travel/findTrips.mdx
@@ -6,7 +6,7 @@ route: /travel/findTrips
 
 # findTrips
 
-```javascript
+```typescript
 (from: string, to: string, date?: Date | string | number) => Promise<Array<TripPattern>>
 ```
 
