--- a/docs/utils/throttler.mdx
+++ b/docs/utils/throttler.mdx
@@ -11,7 +11,7 @@ To help you with this, we have a `throttler` utility that throttles the requests
 
 Example usage:
 
-```
+```javascript
 import createEnturService, { throttler, convertFeatureToLocation } from '@entur/sdk'
 
 const service = createEnturService({ clientName: 'myawesomecompany-myawesomeapp' })
