--- a/docs/places/getParentStopPlace.mdx
+++ b/docs/places/getParentStopPlace.mdx
@@ -6,7 +6,7 @@ route: /places/getParentStopPlace
 
 # getParentStopPlace
 
-```javascript
+```typescript
 (id: string, params?: StopPlaceParams) => Promise<StopPlaceDetails>>
 ```
 
