--- a/docs/bikes/getBikeRentalStations.mdx
+++ b/docs/bikes/getBikeRentalStations.mdx
@@ -1,7 +1,7 @@
 ---
 name: getBikeRentalStations
-menu: Places
-route: /places/getBikeRentalStations
+menu: Bikes
+route: /bikes/getBikeRentalStations
 ---
 
 # getBikeRentalStations
@@ -16,3 +16,25 @@ route: /places/getBikeRentalStations
 
 ### stationIds (`Array<string>`)
 The IDs of the bike rental stations you are interested in. The method will return a Promise which will resolve to an array of objects of type [BikeRentalStation](flow-types/BikeRentalStation.js).
+
+## Example
+
+```javascript
+import createEnturService, { convertFeatureToLocation } from '@entur/sdk'
+
+const service = createEnturService({
+    clientName: 'awesomecompany-awesomeapp'
+})
+
+async function example() {
+    try {
+        const bikeRentalStations = await service.getBikeRentalStations([
+            'YBE:VehicleSharingParkingArea:368',
+            'YBE:VehicleSharingParkingArea:83',
+        ])
+        console.log(bikeRentalStation)
+    } catch (error) {
+        console.error(error)
+    }
+}
+```
