--- a/docs/travel/getTripPatterns.mdx
+++ b/docs/travel/getTripPatterns.mdx
@@ -33,6 +33,7 @@ An object of search parameters.
 | `searchDate`                | `Date`             | | When to calculate patterns |
 | `useFlex`                   | `boolean`          | `false`  | Whether to allow flexible search results or not |
 | `walkSpeed`                 | `number`           | `1.3`    | The walk speed to use in searches in meters per second |
+| `minimumTransferTime`       | `number`           | `120`    | The minimum transfer time to use in searches in seconds |
 | `wheelchairAccessible`      | `boolean`          | `false`  | Include only stops which are wheelchair accessible |
 | `banned`                    | `InputBanned`      |          | Parameters for indicating authorities, lines or quays not be used in the trip patterns  |
 | `whiteListed`               | `InputWhitelisted` |          | Parameters for indicating the only authorities, lines or quays to be used in the trip patterns |
