--- a/docs/departures/getDeparturesFromStopPlaces.mdx
+++ b/docs/departures/getDeparturesFromStopPlaces.mdx
@@ -14,6 +14,8 @@ route: /departures/getDeparturesFromStopPlaces
 
 The method will return an array of objects containing fields for the stop place's `id` and `departures`.
 
+The returned array _can_ contain undefined values. If that's the case, the ID you provided was not valid.
+
 ## Parameters
 
 ### stopPlaceIds (`Array<string>`)
