--- a/docs/advanced/queryJourneyPlanner.mdx
+++ b/docs/advanced/queryJourneyPlanner.mdx
@@ -1,13 +1,13 @@
 ---
-name: journeyPatternQuery
+name: queryJourneyPlanner
 menu: Advanced
-route: /advanced/journeyPatternQuery
+route: /advanced/queryJourneyPlanner
 ---
 
-# journeyPatternQuery
+# queryJourneyPlanner
 
 ```typescript
-<T>(queryObj: string, variables: object, config: ServiceConfig) => Promise<T>
+<T>(queryObj: string, variables: object) => Promise<T>
 ```
 
 If none of the provided functions do exactly what you want, we expose two functions to do direct queries to [the Journey Planner API](https://developer.entur.org/pages-journeyplanner-journeyplanner) and to [NSR](https://developer.entur.org/pages-nsr-nsr).
@@ -24,19 +24,17 @@ The GraphQL query string.
 
 An object with GraphQL variables.
 
-### config (`ServiceConfig`)
-
-Configuration options as specified. See the example below.
-
-Note that journeyPlannerQuery expects a more explicit config parameter than [`createEnturService`](/getting-started).
-
 ## Example
 
 The example below finds lines that stops at the given stop places. Also check this out at [Shamash](https://api.staging.entur.io/journey-planner/v2/ide/?query=%7B%0A%20%20%0A%7D&variables=%7B%0A%20%20%22ids%22%3A%20%5B%22NSR%3AStopPlace%3A4089%22%2C%20%22NSR%3AStopPlace%3A1337%22%5D%0A%7D).
 
 
 ```typescript
-import { journeyPlannerQuery } from '@entur/sdk'
+import createEnturService from '@entur/sdk'
+
+const service = createEnturService({
+    clientName: 'awesomecompany-awesomeapp'
+})
 
 const query = `
 query ($ids: [String!]!) {
@@ -54,15 +52,6 @@ const variables = {
     ids: ['NSR:StopPlace:4089', 'NSR:StopPlace:1337']
 }
 
-const config = {
-    clientName: "myawesomeorg-myawesomeapp",
-    hosts: {
-        journeyPlanner: 'https://api.staging.entur.io/journey-planner/v2/' // Use staging environment
-        geocoder: 'https://api.entur.io/geocoder/v1'
-        nsr: 'https://api.entur.io/stop-places/v1'
-    }
-}
-
-journeyPlannerQuery(query, variables, config)
+service.queryJourneyPlanner(query, variables)
     .then(res => console.log(res)) // Print out lines servicing these stop places
 ```
