Add information about how to use SDK with require

--- a/docs/advanced/queryJourneyPlanner.mdx
+++ b/docs/advanced/queryJourneyPlanner.mdx
@@ -31,6 +31,7 @@ The example below finds lines that stops at the given stop places. Also check th
 
 ```typescript
 import createEnturService from '@entur/sdk'
+// or: const createEnturService = require('@entur/sdk').default
 
 const service = createEnturService({
     clientName: 'awesomecompany-awesomeapp'
