--- a/docs/bikes/getBikeRentalStations.mdx
+++ b/docs/bikes/getBikeRentalStations.mdx
@@ -20,7 +20,8 @@ The IDs of the bike rental stations you are interested in. The method will retur
 ## Example
 
 ```javascript
-import createEnturService, { convertFeatureToLocation } from '@entur/sdk'
+import createEnturService from '@entur/sdk'
+// or: const createEnturService = require('@entur/sdk').default
 
 const service = createEnturService({
     clientName: 'awesomecompany-awesomeapp'
