--- a/docs/utils/throttler.mdx
+++ b/docs/utils/throttler.mdx
@@ -13,6 +13,7 @@ Example usage:
 
 ```javascript
 import createEnturService, { throttler, convertFeatureToLocation } from '@entur/sdk'
+// or: const { default: createEnturService, throttler, convertFeatureToLocation } = require('@entur/sdk')
 
 const service = createEnturService({ clientName: 'myawesomecompany-myawesomeapp' })
 
