--- a/docs/bikes/getBikeRentalStation.mdx
+++ b/docs/bikes/getBikeRentalStation.mdx
@@ -20,7 +20,8 @@ The ID of the bike rental station you are interested in. The method will return 
 ## Example
 
 ```javascript
-import createEnturService, { convertFeatureToLocation } from '@entur/sdk'
+import createEnturService from '@entur/sdk'
+// or: const createEnturService = require('@entur/sdk').default
 
 const service = createEnturService({
     clientName: 'awesomecompany-awesomeapp'
