--- a/docs/bikes/getBikeRentalStationsByPosition.mdx
+++ b/docs/bikes/getBikeRentalStationsByPosition.mdx
@@ -26,7 +26,8 @@ The width and height of the bounding box are therefore `2 * distance`, and the c
 ## Example
 
 ```javascript
-import createEnturService, { convertFeatureToLocation } from '@entur/sdk'
+import createEnturService from '@entur/sdk'
+// or: const createEnturService = require('@entur/sdk').default
 
 const service = createEnturService({
     clientName: 'awesomecompany-awesomeapp'
