--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -9,18 +9,30 @@ npm install @entur/sdk --save
 ```
 
 ## Setup
+Import the service creator:
+
 ```javascript
 import createEnturService from '@entur/sdk'
+```
 
+Or if you are using CommonJS:
+
+```javascript
+const createEnturService = require('@entur/sdk').default
+```
+
+Then create an instance of the service:
+
+```javascript
 const service = createEnturService({ clientName: 'awesomecompany-awesomeapp' })
 ```
 
 ### Configuration
-| Name        | Type                  | Default     | Description                             |
-|:------------|:----------------------|:------------|:----------------------------------------|
-| clientName  | `string`              | `undefined` | The name of your application            |
-| hosts       | `{object of hosts}`   | `{}`        | Override default endpoints              |
-
+| Name        | Required? | Type                  | Default     | Description                             |
+|:------------|-----------|:----------------------|:------------|:----------------------------------------|
+| clientName  | Yes       | `string`              | `undefined` | The name of your application            |
+| hosts       | No        | `{object of hosts}`   | `{}`        | Override default endpoints              |
+| fetch       | No        | `function             | native fetch if browser, `node-fetch` if Node.JS | |
 
 #### clientName (required)
 We require that you pass a `clientName` that identifies your application. It should contain the name of your company or organization,
@@ -34,4 +46,32 @@ The Entur SDK uses multiple endpoints for its services. Each endpoint can be ove
     journeyPlanner: '',
     geocoder: ''
 }
+```
+
+#### fetch
+If you need to configure the fetch implementation that is used, use this. You could use this for:
+
+* Specifying default headers
+* Specifying custom agents
+* Do some common logging on all SDK requests
+
+```
+const service = createEnturService({
+  clientName: 'awesomecompany-awesomeapp',
+  fetch: (url, init) => {
+    const startTime = new Date()
+    console.log(`Request at: ${startTime.toString()}`)
+    return fetch(url, {
+      agent: new HttpsAgent({ keepAlive: true }),
+      ...init,
+      headers: {
+        'My-Default-Header': 'cheese',
+        ...init.headers
+      }
+    }).then(res => {
+      console.log(`Response after ${new Date() - startTime} ms`)
+      return res
+    })
+  }
+})
 ```
