--- a/docs/travel/findTrips.mdx
+++ b/docs/travel/findTrips.mdx
@@ -28,7 +28,8 @@ The wanted time of departure. Can be anything that is parseable by `new Date()`.
 ## Example
 
 ```javascript
-import createEnturService, { convertFeatureToLocation } from '@entur/sdk'
+import createEnturService from '@entur/sdk'
+// or: const createEnturService = require('@entur/sdk').default
 
 const service = createEnturService({
     clientName: 'awesomecompany-awesomeapp'
