--- a/docs/utils/convertFeatureToLocation.mdx
+++ b/docs/utils/convertFeatureToLocation.mdx
@@ -15,6 +15,7 @@ Example usage:
 
 ```javascript
 import createEnturService, { convertFeatureToLocation } from '@entur/sdk'
+// or: const { default: createEnturService, convertFeatureToLocation } = require('@entur/sdk')
 
 const service = createEnturService({
     clientName: 'awesomecompany-awesomeapp',
