--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -32,7 +32,7 @@ const service = createEnturService({ clientName: 'awesomecompany-awesomeapp' })
 |:------------|-----------|:----------------------|:------------|:----------------------------------------|
 | clientName  | Yes       | `string`              | `undefined` | The name of your application            |
 | hosts       | No        | `{object of hosts}`   | `{}`        | Override default endpoints              |
-| fetch       | No        | `function             | native fetch if browser, `node-fetch` if Node.JS | |
+| fetch       | No        | `function`            | native fetch if browser, `node-fetch` if Node.JS |    |
 
 #### clientName (required)
 We require that you pass a `clientName` that identifies your application. It should contain the name of your company or organization,
