--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -5,6 +5,8 @@ route: /
 
 # Entur SDK
 
+![NPM version](https://img.shields.io/npm/v/@entur/sdk)
+
 This SDK simplifies the use of Entur's travel APIs in JavaScript apps and works for both the browser and Node.js.
 For more information about Entur's APIs, see https://developer.entur.org
 
