--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -44,7 +44,8 @@ The Entur SDK uses multiple endpoints for its services. Each endpoint can be ove
 ```javascript
 {
     journeyPlanner: '',
-    geocoder: ''
+    geocoder: '',
+    scooters: '',
 }
 ```
 
