--- a/docs/geocoder/getFeatures.mdx
+++ b/docs/geocoder/getFeatures.mdx
@@ -24,8 +24,19 @@ The results closest to the coordinates will be weighted above results with equal
 As an example, the street `Dronningens gate` exists both in Oslo and Trondheim. If you call `service.getFeatures('Dronningens gate', { latitude: 63.4305103, longitude: 10.3949874 })` (coordinates of Trondheim city center), the Dronningens gate in Trondheim will be preferred to the one in Oslo.
 
 ### params (`GetFeaturesQuery`) [Optional]
-An optional object of parameters to pass to the query.
+An optional object of parameters to pass to the query for filtering. Read more on https://developer.entur.org/pages-geocoder-api.
 
-| Key                  | Type     | Default             | Description |
-|:---------------------|:---------|:--------------------|:------------|
-| `layers`             | `Array<string>` | `["venue", "address"]`   | The types of places to search for. `venue` means stop places and stations, `address` means postal addresses that might not be connected to public transport.
+If any of `min_lon`, `max_lon`, `min_lat`, `max_lat` are specified, all four must be specified.
+
+| Key                     | Type       | Default                | Description |
+|:------------------------|:-----------|:-----------------------|:------------|
+| `boundary.rect.min_lon` | `number`   |                        |             |
+| `boundary.rect.max_lon` | `number`   |                        |             |
+| `boundary.rect.min_lat` | `number`   |                        |             |
+| `boundary.rect.max_lat` | `number`   |                        |             |
+| `boundary.country`      | `string`   |                        |             |
+| `boundary.county_ids`   | `string[]` |                        | Use this for filtering on counties |
+| `boundary.locality_ids` | `string[]` |                        | Use this for filtering on municipalities |
+| `sources`               | `string[]` |                        |             |
+| `limit`                 | `number`   | No limitation          | Limit the maximum number of results to this number. Valid values are from 1 to 100 inclusive. |
+| `layers`                | `string[]` | `["venue", "address"]` | The types of places to search for. `venue` means stop places and stations, `address` means postal addresses that might not be connected to public transport.
