Create new boundary param object on GetFeaturesParam

--- a/docs/geocoder/getFeatures.mdx
+++ b/docs/geocoder/getFeatures.mdx
@@ -26,17 +26,25 @@ As an example, the street `Dronningens gate` exists both in Oslo and Trondheim. 
 ### params (`GetFeaturesQuery`) [Optional]
 An optional object of parameters to pass to the query for filtering. Read more on https://developer.entur.org/pages-geocoder-api.
 
-If any of `min_lon`, `max_lon`, `min_lat`, `max_lat` are specified, all four must be specified.
-
 | Key                     | Type       | Default                | Description |
 |:------------------------|:-----------|:-----------------------|:------------|
-| `boundary.rect.min_lon` | `number`   |                        |             |
-| `boundary.rect.max_lon` | `number`   |                        |             |
-| `boundary.rect.min_lat` | `number`   |                        |             |
-| `boundary.rect.max_lat` | `number`   |                        |             |
-| `boundary.country`      | `string`   |                        |             |
-| `boundary.county_ids`   | `string[]` |                        | Use this for filtering on counties |
-| `boundary.locality_ids` | `string[]` |                        | Use this for filtering on municipalities |
+| `boundary`              | `Boundary` |                        | Allows filtering by geographical region. See details below. |
 | `sources`               | `string[]` |                        |             |
 | `limit`                 | `number`   | No limitation          | Limit the maximum number of results to this number. Valid values are from 1 to 100 inclusive. |
 | `layers`                | `string[]` | `["venue", "address"]` | The types of places to search for. `venue` means stop places and stations, `address` means postal addresses that might not be connected to public transport.
+
+#### Boundary (object)
+| Key            | Type       | Description |
+|:----------------------------|:------------|
+| `country`      | `string`   |             |
+| `countyIds`    | `string[]` | Use this for filtering on counties |
+| `localityIds`  | `string[]` | Use this for filtering on municipalities |
+| `rect`         | `Rect`     |             |
+
+#### Rect (object)
+| Key      | Type     |
+|:---------|:---------|
+| `minLat` | `number` |
+| `minLon` | `number` |
+| `maxLat` | `number` |
+| `maxLon` | `number` |
