Add County enum

--- a/docs/geocoder/getFeatures.mdx
+++ b/docs/geocoder/getFeatures.mdx
@@ -37,7 +37,7 @@ An optional object of parameters to pass to the query for filtering. Read more o
 | Key            | Type       | Description |
 |:----------------------------|:------------|
 | `country`      | `string`   |             |
-| `countyIds`    | `string[]` | Use this for filtering on counties |
+| `countyIds`    | `County[]` | Use this for filtering on counties. You can import the County enum directly from @entur/sdk. |
 | `localityIds`  | `string[]` | Use this for filtering on municipalities |
 | `rect`         | `Rect`     |             |
 
