--- a/docs/travel/getTripPatterns.mdx
+++ b/docs/travel/getTripPatterns.mdx
@@ -29,7 +29,7 @@ An object of search parameters.
 | `arriveBy`                  | `boolean`          | `false` | Depart by `searchDate`, or arrive by `searchDate` |
 | `limit`                     | `number`           | `5`      | Limit result to this number of trip patterns |
 | `maxPreTransitWalkDistance` | `number`           | `Number.MAX_VALUE` | Max walk distance for access/egress legs. |
-| `modes`                     | [`Array of Modes`](#leg-mode) | `['foot', 'bus', 'tram', 'rail', 'metro', 'water', 'air']` | modes of transport to include in trip |
+| `modes`                     | [`QueryMode[]`](https://github.com/entur/sdk/blob/master/src/types/Mode.ts) | `['foot', 'bus', 'tram', 'rail', 'metro', 'water', 'air']` | modes of transport to include in trip |
 | `searchDate`                | `Date`             | | When to calculate patterns |
 | `useFlex`                   | `boolean`          | `false`  | Whether to allow flexible search results or not |
 | `walkSpeed`                 | `number`           | `1.3`    | The walk speed to use in searches in meters per second |
