Remove dead flow-types links

--- a/docs/bikes/getBikeRentalStations.mdx
+++ b/docs/bikes/getBikeRentalStations.mdx
@@ -15,7 +15,7 @@ route: /bikes/getBikeRentalStations
 ## Parameters
 
 ### stationIds (`Array<string>`)
-The IDs of the bike rental stations you are interested in. The method will return a Promise which will resolve to an array of objects of type [BikeRentalStation](flow-types/BikeRentalStation.js).
+The IDs of the bike rental stations you are interested in. The method will return a Promise which will resolve to an array of objects of type BikeRentalStation.
 
 ## Example
 
