--- a/docs/bikes/getBikeRentalStation.mdx
+++ b/docs/bikes/getBikeRentalStation.mdx
@@ -15,7 +15,7 @@ route: /bikes/getBikeRentalStation
 ## Parameters
 
 ### stationId (`string`)
-The ID of the bike rental station you are interested in. The method will return a Promise which will resolve to an object of type [BikeRentalStation](flow-types/BikeRentalStation.js).
+The ID of the bike rental station you are interested in. The method will return a Promise which will resolve to an object of type BikeRentalStation.
 
 ## Example
 
