Remove mention of Flow in documentation intro

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -17,7 +17,7 @@ Ready to get started? Check out [Getting Started!](/getting-started)
 ## Why use the SDK?
 TL;DR: simplicity and types.
 
-The SDK provides a simple interface to accessing Entur's JourneyPlanner and Geocoder APIs through fully typed JavaScript functions for both TypeScript and Flow.
+The SDK provides a simple interface to accessing Entur's JourneyPlanner and Geocoder APIs through fully typed JavaScript functions for TypeScript.
 You avoid a lot of boilerplate like handling network requests, defining GraphQL queries, _understanding_ GraphQL, and so on.
 
 The data types do not include _all_ possible fields and values that the APIs provide, but most likely more than you need.
