Bolt scooter integration

--- a/docs/scooters/getScootersByPosition.mdx
+++ b/docs/scooters/getScootersByPosition.mdx
@@ -24,7 +24,7 @@ This method uses the [Scooters API](https://developer.entur.org/pages-mobility-d
 | `longitude` | `number`            | `true`    | N/A     | The longitude coordinate to find scooters around |
 | `distance`  | `number`            | `false`   | 200     | The radius of the search area, surrounding the latitude/longitude coordinates |
 | `limit`     | `number`            | `false`   | 20      | The max number of scooters to return |
-| `operators` | `ScooterOperator[]` | `false`   | `['TIER', 'VOI', 'LIME', 'ZVIPP' ]` | A list of operators to find scooters for. If not specified, all are returned. |
+| `operators` | `ScooterOperator[]` | `false`   | `['TIER', 'VOI', 'LIME', 'ZVIPP', 'BOLT' ]` | A list of operators to find scooters for. If not specified, all are returned. |
 
 ## Example
 
