Added RequestOptions changes to docs

--- a/docs/bikes/getBikeRentalStation.mdx
+++ b/docs/bikes/getBikeRentalStation.mdx
@@ -17,6 +17,13 @@ route: /bikes/getBikeRentalStation
 ### stationId (`string`)
 The ID of the bike rental station you are interested in. The method will return a Promise which will resolve to an object of type BikeRentalStation.
 
+### options (`RequestOptions`) [Optional]
+An object containing a subset of `RequestInit` options that's applied to the request.
+
+| Key      | Type          | Description |
+|:---------|:--------------|:------------|
+| `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
+
 ## Example
 
 ```javascript
