--- a/docs/geocoder/getFeaturesReverse.mdx
+++ b/docs/geocoder/getFeaturesReverse.mdx
@@ -27,3 +27,10 @@ An optional object of parameters to pass to the query.
 | `radius` | `number`         | 1                     | Radius (in meters) from the given point to limit results.                                                                                                                                |
 | `size`   | `number`         | 10                    | The number of results to return                                                                                                                                                          |
 | `layers` |  `Array<string>` | `["venue","address"]` | The types of places to search for in a comma-separated string. `venue` means stop places and stations, `address` means postal addresses that might not be connected to public transport. |
+
+### options (`RequestOptions`) [Optional]
+An object containing a subset of `RequestInit` options that's applied to the request.
+
+| Key      | Type          | Description |
+|:---------|:--------------|:------------|
+| `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
