--- a/docs/places/getStopPlacesByPosition.mdx
+++ b/docs/places/getStopPlacesByPosition.mdx
@@ -26,3 +26,10 @@ The width and height of the bounding box are therefore `2 * distance`, and the c
 ### params (`Object`) [Optional]
 
 See the `params` parameter for `getStopPlace`.
+
+### options (`RequestOptions`) [Optional]
+An object containing a subset of `RequestInit` options that's applied to the request.
+
+| Key      | Type          | Description |
+|:---------|:--------------|:------------|
+| `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
