--- a/docs/travel/findTrips.mdx
+++ b/docs/travel/findTrips.mdx
@@ -25,6 +25,13 @@ The place you want to search from. For instance `"Bergen"`
 ### date (`Date | string | number`) [Optional]
 The wanted time of departure. Can be anything that is parseable by `new Date()`. If not provided, the search will be from "now".
 
+### options (`RequestOptions`) [Optional]
+An object containing a subset of `RequestInit` options that's applied to the request.
+
+| Key      | Type          | Description |
+|:---------|:--------------|:------------|
+| `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
+
 ## Example
 
 ```javascript
