--- a/docs/advanced/queryNsr.mdx
+++ b/docs/advanced/queryNsr.mdx
@@ -23,3 +23,10 @@ The GraphQL query string.
 ### variables (`object`)
 
 An object with GraphQL variables.
+
+### options (`RequestOptions`) [Optional]
+An object containing a subset of `RequestInit` options that's applied to the request.
+
+| Key      | Type          | Description |
+|:---------|:--------------|:------------|
+| `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
