--- a/docs/departures/getDeparturesForServiceJourney.mdx
+++ b/docs/departures/getDeparturesForServiceJourney.mdx
@@ -19,3 +19,10 @@ The ID of the service journey to get departures for.
 
 ### date (`string`) [Optional]
 A date on the form "YYYY-MM-DD" to use if you want the service journey's departures for another date than today.
+
+### options (`RequestOptions`) [Optional]
+An object containing a subset of `RequestInit` options that's applied to the request.
+
+| Key      | Type          | Description |
+|:---------|:--------------|:------------|
+| `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
