--- a/docs/departures/getDeparturesFromStopPlaces.mdx
+++ b/docs/departures/getDeparturesFromStopPlaces.mdx
@@ -24,3 +24,10 @@ The IDs of the stop places you are interested in.
 ### params (`Object`) [Optional]
 
 See the `params` parameter for [`getDeparturesForStopPlace`](/departures/getDeparturesFromStopPlace#params-object-optional).
+
+### options (`RequestOptions`) [Optional]
+An object containing a subset of `RequestInit` options that's applied to the request.
+
+| Key      | Type          | Description |
+|:---------|:--------------|:------------|
+| `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
