--- a/docs/geocoder/getFeatures.mdx
+++ b/docs/geocoder/getFeatures.mdx
@@ -35,7 +35,7 @@ An optional object of parameters to pass to the query for filtering. Read more o
 
 #### Boundary (object)
 | Key            | Type       | Description |
-|:----------------------------|:------------|
+|:---------------|------------|:------------|
 | `country`      | `string`   |             |
 | `countyIds`    | `County[]` | Use this for filtering on counties. You can import the County enum directly from @entur/sdk. |
 | `localityIds`  | `string[]` | Use this for filtering on municipalities |
@@ -48,3 +48,10 @@ An optional object of parameters to pass to the query for filtering. Read more o
 | `minLon` | `number` |
 | `maxLat` | `number` |
 | `maxLon` | `number` |
+
+### options (`RequestOptions`) [Optional]
+An object containing a subset of `RequestInit` options that's applied to the request.
+
+| Key      | Type          | Description |
+|:---------|:--------------|:------------|
+| `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
