--- a/docs/places/getParentStopPlace.mdx
+++ b/docs/places/getParentStopPlace.mdx
@@ -19,3 +19,10 @@ The ID of the stop place to get the parent stop place of.
 ### params (`Object`) [Optional]
 
 See the `params` parameter for `getStopPlace`.
+
+### options (`RequestOptions`) [Optional]
+An object containing a subset of `RequestInit` options that's applied to the request.
+
+| Key      | Type          | Description |
+|:---------|:--------------|:------------|
+| `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
