--- a/docs/places/getQuaysForStopPlace.mdx
+++ b/docs/places/getQuaysForStopPlace.mdx
@@ -22,3 +22,10 @@ The ID of the stop place to find quays for. Example: `"NSR:StopPlace:59616"`.
 | Key                      | Type           | Default      | Description |
 |:-------------------------|:---------------|:-------------|:------------|
 | `includeUnusedQuays`     | `boolean`      | `true`       | Whether to include quays no longer in use or not. |
+
+### options (`RequestOptions`) [Optional]
+An object containing a subset of `RequestInit` options that's applied to the request.
+
+| Key      | Type          | Description |
+|:---------|:--------------|:------------|
+| `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
