--- a/docs/places/getStopPlaces.mdx
+++ b/docs/places/getStopPlaces.mdx
@@ -21,3 +21,10 @@ The IDs of the stop places to get.
 ### params (`Object`) [Optional]
 
 See the `params` parameter for `getStopPlace`.
+
+### options (`RequestOptions`) [Optional]
+An object containing a subset of `RequestInit` options that's applied to the request.
+
+| Key      | Type          | Description |
+|:---------|:--------------|:------------|
+| `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
