--- a/docs/scooters/getScootersByPosition.mdx
+++ b/docs/scooters/getScootersByPosition.mdx
@@ -26,6 +26,13 @@ This method uses the [Scooters API](https://developer.entur.org/pages-mobility-d
 | `limit`     | `number`            | `false`   | 20      | The max number of scooters to return |
 | `operators` | `ScooterOperator[]` | `false`   | `['TIER', 'VOI', 'LIME', 'ZVIPP', 'BOLT' ]` | A list of operators to find scooters for. If not specified, all are returned. |
 
+### options (`RequestOptions`) [Optional]
+An object containing a subset of `RequestInit` options that's applied to the request.
+
+| Key      | Type          | Description |
+|:---------|:--------------|:------------|
+| `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
+
 ## Example
 
 ```javascript
