--- a/docs/geocoder/getFeatures.mdx
+++ b/docs/geocoder/getFeatures.mdx
@@ -29,13 +29,14 @@ As an example, the street `Dronningens gate` exists both in Oslo and Trondheim. 
 
 An optional object of parameters to pass to the query for filtering. Read more on https://developer.entur.org/pages-geocoder-api.
 
-| Key        | Type        | Default                | Description                                                                                                                                                  |
-| :--------- | :---------- | :--------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `boundary` | `Boundary`  |                        | Allows filtering by geographical region. See details below.                                                                                                  |
-| `sources`  | `string[]`  |                        |                                                                                                                                                              |
-| `limit`    | `number`    | No limitation          | Limit the maximum number of results to this number. Valid values are from 1 to 100 inclusive.                                                                |
-| `layers`   |  `string[]` | `["venue", "address"]` | The types of places to search for. `venue` means stop places and stations, `address` means postal addresses that might not be connected to public transport. |
-| `focus`    | `Focus`     |                        | Override default values for priority of `Coordinates` focus point                                                                                            |
+| Key          | Type                      | Default                | Description                                                                                                                                                  |
+| :----------- | :------------------------ | :--------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `boundary`   | `Boundary`                |                        | Allows filtering by geographical region. See details below.                                                                                                  |
+| `sources`    | `string[]`                |                        |                                                                                                                                                              |
+| `limit`      | `number`                  | No limitation          | Limit the maximum number of results to this number. Valid values are from 1 to 100 inclusive.                                                                |
+| `layers`     |  `string[]`               | `["venue", "address"]` | The types of places to search for. `venue` means stop places and stations, `address` means postal addresses that might not be connected to public transport. |
+| `focus`      | `Focus`                   |                        | Override default values for priority of `Coordinates` focus point                                                                                            |
+| `multiModal` |  `parent`, `child`, `all` |                        | The types of places to search for. `venue` means stop places and stations, `address` means postal addresses that might not be connected to public transport. |
 
 #### Focus (object)
 
