Add format script for formatting non-eslinted filed

--- a/docs/bikes/getBikeRentalStations.mdx
+++ b/docs/bikes/getBikeRentalStations.mdx
@@ -15,13 +15,15 @@ route: /bikes/getBikeRentalStations
 ## Parameters
 
 ### stationIds (`Array<string>`)
+
 The IDs of the bike rental stations you are interested in. The method will return a Promise which will resolve to an array of objects of type BikeRentalStation.
 
 ### options (`RequestOptions`) [Optional]
+
 An object containing a subset of `RequestInit` options that's applied to the request.
 
-| Key      | Type          | Description |
-|:---------|:--------------|:------------|
+| Key      | Type          | Description                                                                                                                                       |
+| :------- | :------------ | :------------------------------------------------------------------------------------------------------------------------------------------------ |
 | `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
 
 ## Example
@@ -31,7 +33,7 @@ import createEnturService from '@entur/sdk'
 // or: const createEnturService = require('@entur/sdk').default
 
 const service = createEnturService({
-    clientName: 'awesomecompany-awesomeapp'
+    clientName: 'awesomecompany-awesomeapp',
 })
 
 async function example() {
