--- a/docs/utils/convertFeatureToLocation.mdx
+++ b/docs/utils/convertFeatureToLocation.mdx
@@ -32,7 +32,7 @@ async function example() {
 
     const tripPatterns = await service.getTripPatterns({
         from: osloLocation,
-        to: bergenLocation
+        to: bergenLocation,
     })
 
     console.log(tripPatterns)
