--- a/docs/bikes/getBikeRentalStationsByPosition.mdx
+++ b/docs/bikes/getBikeRentalStationsByPosition.mdx
@@ -15,19 +15,22 @@ route: /bikes/getBikeRentalStationsByPosition
 ## Parameters
 
 ### coordinates (`{ latitude: number, longitude: number }`)
+
 The coordinates of which to find bike rental stations around.
 
 ### distance (`number`) [Optional]
+
 Default: `500`
 
 The "radius" in meters of the surrounding bounding box in which you want to find bike rental stations.
 The width and height of the bounding box are therefore `2 * distance`, and the coordinates given are its centerpoint.
 
 ### options (`RequestOptions`) [Optional]
+
 An object containing a subset of `RequestInit` options that's applied to the request.
 
-| Key      | Type          | Description |
-|:---------|:--------------|:------------|
+| Key      | Type          | Description                                                                                                                                       |
+| :------- | :------------ | :------------------------------------------------------------------------------------------------------------------------------------------------ |
 | `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
 
 ## Example
@@ -37,7 +40,7 @@ import createEnturService from '@entur/sdk'
 // or: const createEnturService = require('@entur/sdk').default
 
 const service = createEnturService({
-    clientName: 'awesomecompany-awesomeapp'
+    clientName: 'awesomecompany-awesomeapp',
 })
 
 async function example() {
