--- a/docs/getting-started.mdx
+++ b/docs/getting-started.mdx
@@ -4,11 +4,13 @@ route: /getting-started
 ---
 
 ## Install
+
 ```bash
 npm install @entur/sdk --save
 ```
 
 ## Setup
+
 Import the service creator:
 
 ```javascript
@@ -28,17 +30,20 @@ const service = createEnturService({ clientName: 'awesomecompany-awesomeapp' })
 ```
 
 ### Configuration
-| Name        | Required? | Type                  | Default     | Description                             |
-|:------------|-----------|:----------------------|:------------|:----------------------------------------|
-| clientName  | Yes       | `string`              | `undefined` | The name of your application            |
-| hosts       | No        | `{object of hosts}`   | `{}`        | Override default endpoints              |
-| fetch       | No        | `function`            | native fetch if browser, `node-fetch` if Node.JS |    |
+
+| Name       | Required? | Type                | Default                                          | Description                  |
+| :--------- | --------- | :------------------ | :----------------------------------------------- | :--------------------------- |
+| clientName | Yes       | `string`            | `undefined`                                      | The name of your application |
+| hosts      | No        | `{object of hosts}` | `{}`                                             | Override default endpoints   |
+| fetch      | No        | `function`          | native fetch if browser, `node-fetch` if Node.JS |                              |
 
 #### clientName (required)
+
 We require that you pass a `clientName` that identifies your application. It should contain the name of your company or organization,
 followed by a hyphen and your application's name. See https://developer.entur.org/pages-intro-authentication for more information.
 
 #### hosts
+
 The Entur SDK uses multiple endpoints for its services. Each endpoint can be overridden with hosts config (in case you use a proxy or a local instance of the endpoint). Available hosts are:
 
 ```javascript
@@ -50,11 +55,12 @@ The Entur SDK uses multiple endpoints for its services. Each endpoint can be ove
 ```
 
 #### fetch
+
 If you need to configure the fetch implementation that is used, use this. You could use this for:
 
-* Specifying default headers
-* Specifying custom agents
-* Do some common logging on all SDK requests
+-   Specifying default headers
+-   Specifying custom agents
+-   Do some common logging on all SDK requests
 
 ```
 const service = createEnturService({
