--- a/docs/places/getNearestPlaces.mdx
+++ b/docs/places/getNearestPlaces.mdx
@@ -15,24 +15,26 @@ Finds the nearest places to a given coordinate.
 ## Parameters
 
 ### coordinates (`{ latitude: number, longitude: number }`)
+
 The latitude and longitude for the point you want to find places close to.
 
 ### params (`Object`) [Optional]
 
-| Key                      | Type           | Default      | Description |
-|:-------------------------|:---------------|:-------------|:------------|
-| `maximumDistance`        | `number`       | `2000`       | Maximum distance (in meters) to search for from the specified location. |
-| `maximumResults`         | `number`       | `20`         | The maximum number of results to return. |
-| `filterByPlaceTypes`     | `'BikePark' | 'BikeRentalStation' | 'CarPark' | 'Quay' | 'StopPlace'` | No restrictions. | Only include places of given types if set. |
-| `filterByModes`          | `TransportMode` | No restrictions. | Only include places that include this mode. Only checked for places with mode i.e. quays, departures. |
-| `filterByInUse`          | `boolean` | `false`. | Only affects queries for quays and stop places. If true only quays and stop places with at least one visiting line are included. |
-| `multiModalMode`         | `'parent' | 'child' | 'all'` | `'parent'`. | MultiModalMode for query. To control whether multi modal parent stop places, their mono modal children or both are included in the response. Does not affect mono modal stop places that do not belong to a multi modal stop place. Only applicable for placeType StopPlace |
+| Key                  | Type             | Default             | Description                                                                                                                      |
+| :------------------- | :--------------- | :------------------ | :------------------------------------------------------------------------------------------------------------------------------- | ----------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------- | ------------------------------------------ |
+| `maximumDistance`    |  `number`        | `2000`              | Maximum distance (in meters) to search for from the specified location.                                                          |
+| `maximumResults`     |  `number`        | `20`                | The maximum number of results to return.                                                                                         |
+| `filterByPlaceTypes` |  `'BikePark'     | 'BikeRentalStation' | 'CarPark'                                                                                                                        | 'Quay'      | 'StopPlace'`                                                                                                                                                                                                                                                                | No restrictions. | Only include places of given types if set. |
+| `filterByModes`      |  `TransportMode` | No restrictions.    | Only include places that include this mode. Only checked for places with mode i.e. quays, departures.                            |
+| `filterByInUse`      |  `boolean`       | `false`.            | Only affects queries for quays and stop places. If true only quays and stop places with at least one visiting line are included. |
+| `multiModalMode`     |  `'parent'       | 'child'             | 'all'`                                                                                                                           | `'parent'`. | MultiModalMode for query. To control whether multi modal parent stop places, their mono modal children or both are included in the response. Does not affect mono modal stop places that do not belong to a multi modal stop place. Only applicable for placeType StopPlace |
 
 ### options (`RequestOptions`) [Optional]
+
 An object containing a subset of `RequestInit` options that's applied to the request.
 
-| Key      | Type          | Description |
-|:---------|:--------------|:------------|
+| Key      | Type          | Description                                                                                                                                       |
+| :------- | :------------ | :------------------------------------------------------------------------------------------------------------------------------------------------ |
 | `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
 
 ## Example
@@ -42,7 +44,7 @@ import createEnturService, { TypeName } from '@entur/sdk'
 // or: const createEnturService = require('@entur/sdk').default
 
 const service = createEnturService({
-    clientName: 'awesomecompany-awesomeapp'
+    clientName: 'awesomecompany-awesomeapp',
 })
 
 async function example() {
@@ -50,7 +52,7 @@ async function example() {
         const nearbyPlaces = await service.getNearestPlaces(
             {
                 latitude: 59.911898,
-                longitude:10.75038,
+                longitude: 10.75038,
             },
             {
                 filterByPlaceTypes: [TypeName.STOP_PLACE],
