--- a/docs/scooters/getScootersByPosition.mdx
+++ b/docs/scooters/getScootersByPosition.mdx
@@ -18,19 +18,20 @@ This method uses the [Scooters API](https://developer.entur.org/pages-mobility-d
 
 ### params (`Object`)
 
-| Key         | Type                | Required? | Default | Description |
-|:------------|:--------------------|:----------|:--------|
-| `latitude`  | `number`            | `true`    | N/A     | The latitude coordinate to find scooters around |
-| `longitude` | `number`            | `true`    | N/A     | The longitude coordinate to find scooters around |
-| `distance`  | `number`            | `false`   | 200     | The radius of the search area, surrounding the latitude/longitude coordinates |
-| `limit`     | `number`            | `false`   | 20      | The max number of scooters to return |
-| `operators` | `ScooterOperator[]` | `false`   | `['TIER', 'VOI', 'LIME', 'ZVIPP', 'BOLT' ]` | A list of operators to find scooters for. If not specified, all are returned. |
+| Key         | Type                 | Required? | Default                                     | Description                                                                   |
+| :---------- | :------------------- | :-------- | :------------------------------------------ | ----------------------------------------------------------------------------- |
+| `latitude`  |  `number`            | `true`    | N/A                                         | The latitude coordinate to find scooters around                               |
+| `longitude` |  `number`            | `true`    | N/A                                         | The longitude coordinate to find scooters around                              |
+| `distance`  |  `number`            | `false`   | 200                                         | The radius of the search area, surrounding the latitude/longitude coordinates |
+| `limit`     |  `number`            | `false`   | 20                                          | The max number of scooters to return                                          |
+| `operators` |  `ScooterOperator[]` | `false`   | `['TIER', 'VOI', 'LIME', 'ZVIPP', 'BOLT' ]` | A list of operators to find scooters for. If not specified, all are returned. |
 
 ### options (`RequestOptions`) [Optional]
+
 An object containing a subset of `RequestInit` options that's applied to the request.
 
-| Key      | Type          | Description |
-|:---------|:--------------|:------------|
+| Key      | Type          | Description                                                                                                                                       |
+| :------- | :------------ | :------------------------------------------------------------------------------------------------------------------------------------------------ |
 | `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
 
 ## Example
@@ -40,20 +41,18 @@ import createEnturService from '@entur/sdk'
 // or: const createEnturService = require('@entur/sdk').default
 
 const service = createEnturService({
-    clientName: 'awesomecompany-awesomeapp'
+    clientName: 'awesomecompany-awesomeapp',
 })
 
 async function example() {
     try {
-        const scooters = await service.getScootersByPosition(
-            {
-                latitude: 59.95,
-                longitude: 10.75,
-                distance: 200,
-                limit: 10,
-                operators: ['TIER', 'VOI'], // Use the ScooterOperator enum if using TypeScript
-            },
-        )
+        const scooters = await service.getScootersByPosition({
+            latitude: 59.95,
+            longitude: 10.75,
+            distance: 200,
+            limit: 10,
+            operators: ['TIER', 'VOI'], // Use the ScooterOperator enum if using TypeScript
+        })
         console.log(scooters)
     } catch (error) {
         console.error(error)
@@ -70,16 +69,24 @@ We have explicitly typed this by making the `Scooter` type a union type of `Batt
 The utility method `isBatteryScooter` and `isBatteryLevelScooter` can be used to refine the type, as shown in the example below:
 
 ```typescript
-import createEnturService, { Scooter, isBatteryScooter, BatteryLevel } from '@entur/sdk'
+import createEnturService, {
+    Scooter,
+    isBatteryScooter,
+    BatteryLevel,
+} from '@entur/sdk'
 
 const service = createEnturService({
-    clientName: 'awesomecompany-awesomeapp'
+    clientName: 'awesomecompany-awesomeapp',
 })
 
 async function averageBatteryPercentage(): Promise<number> {
-    const scooters = await service.getScootersByPosition({ latitude: 59.909, longitude: 10.746, limit: 1 })
+    const scooters = await service.getScootersByPosition({
+        latitude: 59.909,
+        longitude: 10.746,
+        limit: 1,
+    })
 
-    const batteryPercentages: number[] = scooters.map(scooter => {
+    const batteryPercentages: number[] = scooters.map((scooter) => {
         if (isBatteryScooter(scooter)) {
             return scooter.battery
         }
@@ -97,7 +104,9 @@ async function averageBatteryPercentage(): Promise<number> {
         }
     })
 
-    return batteryPercentages.reduce((a, b) => a + b) / batteryPercentages.length
+    return (
+        batteryPercentages.reduce((a, b) => a + b) / batteryPercentages.length
+    )
 }
 
 averageBatteryPercentage()
