--- a/docs/travel/getTripPatterns.mdx
+++ b/docs/travel/getTripPatterns.mdx
@@ -17,41 +17,42 @@ If you are going to do a huge amount of different searches at the same time, con
 ## Parameters
 
 ### params (`GetTripPatternsParams`)
+
 An object of search parameters.
 
-| Key                         | Type               | Default   | Description |
-|:----------------------------|:-------------------|:----------|:------------|
-| `from`                      | `Location`         |          | The location to search for travels from. |
-| `to`                        | `Location`         |          | The destination location to search for travels to. |
-| `allowBikeRental`           | `boolean`          | `false` | Is bike rental allowed? |
-| `arriveBy`                  | `boolean`          | `false` | Depart by `searchDate`, or arrive by `searchDate` |
-| `limit`                     | `number`           | `5`      | Limit result to this number of trip patterns |
-| `maxPreTransitWalkDistance` | `number`           | `Number.MAX_VALUE` | Max walk distance for access/egress legs. |
-| `modes`                     | [`QueryMode[]`](https://github.com/entur/sdk/blob/master/src/types/Mode.ts) | `['foot', 'bus', 'tram', 'rail', 'metro', 'water', 'air']` | modes of transport to include in trip |
-| `searchDate`                | `Date`             | | When to calculate patterns |
-| `useFlex`                   | `boolean`          | `false`  | Whether to allow flexible search results or not |
-| `walkSpeed`                 | `number`           | `1.3`    | The walk speed to use in searches in meters per second |
-| `minimumTransferTime`       | `number`           | `120`    | The minimum transfer time to use in searches in seconds |
-| `wheelchairAccessible`      | `boolean`          | `false`  | Include only stops which are wheelchair accessible |
-| `banned`                    | `InputBanned`      |          | Parameters for indicating authorities, lines or quays not be used in the trip patterns  |
-| `whiteListed`               | `InputWhitelisted` |          | Parameters for indicating the only authorities, lines or quays to be used in the trip patterns |
+| Key                         | Type                                                                         | Default                                                     | Description                                                                                    |
+| :-------------------------- | :--------------------------------------------------------------------------- | :---------------------------------------------------------- | :--------------------------------------------------------------------------------------------- |
+| `from`                      |  `Location`                                                                  |                                                             | The location to search for travels from.                                                       |
+| `to`                        |  `Location`                                                                  |                                                             | The destination location to search for travels to.                                             |
+| `allowBikeRental`           |  `boolean`                                                                   |  `false`                                                    | Is bike rental allowed?                                                                        |
+| `arriveBy`                  |  `boolean`                                                                   |  `false`                                                    | Depart by `searchDate`, or arrive by `searchDate`                                              |
+| `limit`                     |  `number`                                                                    |  `5`                                                        | Limit result to this number of trip patterns                                                   |
+| `maxPreTransitWalkDistance` |  `number`                                                                    |  `Number.MAX_VALUE`                                         | Max walk distance for access/egress legs.                                                      |
+| `modes`                     |  [`QueryMode[]`](https://github.com/entur/sdk/blob/master/src/types/Mode.ts) |  `['foot', 'bus', 'tram', 'rail', 'metro', 'water', 'air']` | modes of transport to include in trip                                                          |
+| `searchDate`                |  `Date`                                                                      |                                                             | When to calculate patterns                                                                     |
+| `useFlex`                   |  `boolean`                                                                   | `false`                                                     | Whether to allow flexible search results or not                                                |
+| `walkSpeed`                 |  `number`                                                                    |  `1.3`                                                      | The walk speed to use in searches in meters per second                                         |
+| `minimumTransferTime`       |  `number`                                                                    |  `120`                                                      | The minimum transfer time to use in searches in seconds                                        |
+| `wheelchairAccessible`      |  `boolean`                                                                   |  `false`                                                    | Include only stops which are wheelchair accessible                                             |
+| `banned`                    |  `InputBanned`                                                               |                                                             | Parameters for indicating authorities, lines or quays not be used in the trip patterns         |
+| `whiteListed`               |  `InputWhitelisted`                                                          |                                                             | Parameters for indicating the only authorities, lines or quays to be used in the trip patterns |
 
 InputBanned and InputWhitelisted types:
 
 ```typescript
 interface InputBanned {
-    lines?: Array<string>;
-    authorities?: Array<string>;
-    organisations?: Array<string>;
-    quays?: Array<string>;
-    quaysHard?: Array<string>;
-    serviceJourneys?: Array<string>;
+    lines?: Array<string>
+    authorities?: Array<string>
+    organisations?: Array<string>
+    quays?: Array<string>
+    quaysHard?: Array<string>
+    serviceJourneys?: Array<string>
 }
 
 interface InputWhiteListed {
-    lines?: Array<string>;
-    authorities?: Array<string>;
-    organisations?: Array<string>;
+    lines?: Array<string>
+    authorities?: Array<string>
+    organisations?: Array<string>
 }
 ```
 
@@ -61,21 +62,22 @@ You can override the default service config on invocation if necessary.
 
 ```typescript
 interface OverrideConfig {
-    clientName?: string;
+    clientName?: string
     hosts?: {
-        journeyPlanner?: string;
-        geocoder?: string;
-        nsr?: string;
-    };
-    headers?: {[key: string]: string};
+        journeyPlanner?: string
+        geocoder?: string
+        nsr?: string
+    }
+    headers?: { [key: string]: string }
 }
 ```
 
 ### options (`RequestOptions`) [Optional]
+
 An object containing a subset of `RequestInit` options that's applied to the request.
 
-| Key      | Type          | Description |
-|:---------|:--------------|:------------|
+| Key      | Type          | Description                                                                                                                                       |
+| :------- | :------------ | :------------------------------------------------------------------------------------------------------------------------------------------------ |
 | `signal` | `AbortSignal` | Allows you to communicate with a fetch request and abort it if desired. [Read more](https://developer.mozilla.org/en-US/docs/Web/API/AbortSignal) |
 
 ## Example
